add common.yaml data and update directories'

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,9 +1,12 @@
 ---
 
-jellyfin::executable_dir: ''
-jellyfin::data_dir: ''
-jellyfin::cache_dir: ''
-jellyfin::config_dir: ''
-jellyfin::log_file: ''
-jellyfin::system_user: ''
-jellyfin::system_platform: ''
+jellyfin::executable_dir: '/opt/jellyfin'
+jellyfin::data_dir: '/var/lib/jellyfin/data'
+jellyfin::cache_dir: '/var/lib/jellyfin/cache'
+jellyfin::config_dir: '/etc/jellyfin'
+jellyfin::log_dir: '/var/log/jellyfin'
+jellyfin::system_user: 'jellyfin'
+jellyfin::system_platform: 'amd64'
+jellyfin::version: '10.10.6'
+jellyfin::ffmpeg_version: '7.0.2-9'
+jellyfin::ffmpeg_dir: '/opt/ffmpeg'
